@@ -785,6 +785,36 @@ schema = Schema((
         enforceVocabulary=True,
         write_permission="PloneMeeting: Write risky config",
     ),
+    BooleanField(
+        name='keepAdvicesOnSentToOtherMC',
+        default=defValues.keepAdvicesOnSentToOtherMC,
+        widget=BooleanField._properties['widget'](
+            description="KeepAdvicesOnSentToOtherMC",
+            description_msgid="keep_advices_on_sent_to_other_mc_descr",
+            label='Keepadvicesonsenttoothermc',
+            label_msgid='PloneMeeting_label_keepAdvicesOnSentToOtherMC',
+            i18n_domain='PloneMeeting',
+        ),
+        schemata="data",
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    LinesField(
+        name='advicesKeptOnSentToOtherMC',
+        default=defValues.advicesKeptOnSentToOtherMC,
+        widget=MultiSelectionWidget(
+            description="AdvicesKeptOnSentToOtherMC",
+            description_msgid="advices_kept_on_sent_to_other_mc_descr",
+            format="checkbox",
+            label='AdviceskeptonSenttoothermc',
+            label_msgid='PloneMeeting_label_advicesKeptOnSentToOtherMC',
+            i18n_domain='PloneMeeting',
+        ),
+        schemata="data",
+        multiValued=1,
+        vocabulary_factory='Products.PloneMeeting.vocabularies.askedadvicesvocabulary',
+        enforceVocabulary=True,
+        write_permission="PloneMeeting: Write risky config",
+    ),
     StringField(
         name='annexToPrintMode',
         default=defValues.annexToPrintMode,
